multi astre force compute implanted, now we need to update said astre position

--- a/src/makefile
+++ b/src/makefile
@@ -3,7 +3,7 @@ all: main
 
 
 main:
-	g++ test.cpp celestial_body.cpp spacecraft.cpp nled_solver.c image.cpp
+	g++ -fpermissive test.cpp celestial_body.cpp spacecraft.cpp nled_solver.c image.cpp
 
 make clean:
 	rm a.out *.bmp
